--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,4 +1,4 @@
-.example {
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
@@ -25,4 +25,23 @@
   background-image: url('../images/logo.png');
   background-size: cover;
   background-position: center;
+}
+
+.loader-hidden ,  .error-hidden, .select-hidden, .cat-hidden {
+  display: none;
+}
+
+.cat-card {
+  position: relative;
+  width: 400px;
+  margin: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.text-cont{
+  margin: 20px;
 }
