--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -45,3 +45,24 @@ body {
 .text-cont{
   margin: 20px;
 }
+
+.loader-spin {
+  width: 30px;
+  height: 30px;
+  border: 
+  3px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
